--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+# Ejemplos
+github-ejemplo/
+
 # Run android virtual device
 avd-coder-app.sh
 
