--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # Ejemplos
-github-ejemplo
-ejemplo-task
-ejemplo
-ejemplo-2
+github-ejemplo/
+ejemplo-task/
+ejemplo/
+ejemplo-2/
 
 # Run android virtual device
 avd-coder-app.sh
