--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@reduxjs/toolkit": "^2.2.1",
     "eslint-config-prettier": "^9.1.0",
     "expo": "~50.0.2",
+    "expo-file-system": "~16.0.8",
     "expo-font": "^11.10.2",
+    "expo-image-picker": "~14.7.1",
+    "expo-sqlite": "^13.3.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,9 +30,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
-    "yup": "^1.4.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-file-system": "~16.0.8"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
