--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
     "yup": "^1.4.0"
